--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.0.5
   get_it: ^6.0.0
   carousel_slider: ^3.0.0
+  http: ^0.12.1
 
 dev_dependencies:
   flutter_test:
